chore: - remove the "utc time" , energy(nbdr) - numbers overflowing orange square, make it wider. corrected the nbdr value - account token popup covers the menu, when viewing on phone - number updated / jumped around several times - This is because a new block is being added periodically. So disable websocket update - show 11 blockspans

--- a/frontend/src/app/oe/components/base-box/base-box.component.scss
+++ b/frontend/src/app/oe/components/base-box/base-box.component.scss
@@ -49,7 +49,7 @@
       color: black;
       font-weight: bold;
       position: absolute;
-      width: 50%;
+      width: 80%;
       height: 30%;
       background-color: orange;
       top: 50%;
